--- a/src/ShapedView.SampleApp/Resources/layout/content_main.xml
+++ b/src/ShapedView.SampleApp/Resources/layout/content_main.xml
@@ -1,22 +1,139 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:rowCount="2"
+    android:columnCount="7"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main">
 
-   <Xama.JTPorts.ShapedView.Shapes.DiagonalView
-        android:layout_width="150dp"
+    <Xama.JTPorts.ShapedView.Shapes.CircleView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:elevation="4dp"
+        app:shape_circle_borderColor="@android:color/black"
+        app:shape_circle_borderWidth="2dp">
+                <LinearLayout
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </Xama.JTPorts.ShapedView.Shapes.CircleView>
+
+    <Xama.JTPorts.ShapedView.Shapes.RoundRectView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:elevation="4dp"
+        app:shape_roundRect_bottomLeftRadius="10dp"
+        app:shape_roundRect_bottomRightRadius="10dp"
+        app:shape_roundRect_topLeftRadius="10dp"
+        app:shape_roundRect_topRightRadius="10dp"
+        app:shape_roundRect_borderColor="@android:color/black"
+        app:shape_roundRect_borderWidth="2dp" >
+                <LinearLayout
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </Xama.JTPorts.ShapedView.Shapes.RoundRectView>
+
+    <Xama.JTPorts.ShapedView.Shapes.CutCornerView
+        android:id="@+id/clipCorner"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:elevation="4dp"
+        app:shape_cutCorner_bottomRightSize="20dp">
+                <LinearLayout
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </Xama.JTPorts.ShapedView.Shapes.CutCornerView>
+
+    <Xama.JTPorts.ShapedView.Shapes.ArcView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:elevation="4dp"
+        app:shape_arc_cropDirection="outside"
+        app:shape_arc_height="20dp"
+        app:shape_arc_position="bottom">
+                <LinearLayout
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </Xama.JTPorts.ShapedView.Shapes.ArcView>
+
+    <Xama.JTPorts.ShapedView.Shapes.DiagonalView
+       android:layout_width="150dp"
         android:layout_height="100dp"
         android:elevation="4dp"
-        app:shape_diagonal_angle="10"
-        app:shape_diagonal_direction="right" 
-        app:shape_diagonal_position="bottom">
+        app:shape_diagonal_angle="45"
+        app:shape_diagonal_direction="left" 
+        app:shape_diagonal_position="top">
+                <LinearLayout
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </Xama.JTPorts.ShapedView.Shapes.DiagonalView>
 
-         <!-- YOUR CONTENT -->
+    <Xama.JTPorts.ShapedView.Shapes.TriangleView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:elevation="4dp"
+        app:shape_triangle_percentBottom="0.5"
+        app:shape_triangle_percentLeft="0"
+        app:shape_triangle_percentRight="0">
+                <LinearLayout
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </Xama.JTPorts.ShapedView.Shapes.TriangleView>
 
-</Xama.JTPorts.ShapedView.Shapes.DiagonalView>
+    <Xama.JTPorts.ShapedView.Shapes.BubbleView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:shape_bubble_arrowHeight="10dp"
+        app:shape_bubble_arrowWidth="10dp"
+        app:shape_bubble_arrowPosition="bottom"
+        app:shape_bubble_borderRadius="20dp"
+        app:arrow_posititon_percent="0.5">
+                <LinearLayout
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </Xama.JTPorts.ShapedView.Shapes.BubbleView>
 
-</RelativeLayout>
+    <Xama.JTPorts.ShapedView.Shapes.StarView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:shape_star_noOfPoints="5">
+                <LinearLayout
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </Xama.JTPorts.ShapedView.Shapes.StarView>
+
+    <Xama.JTPorts.ShapedView.Shapes.PolygonView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:shape_polygon_noOfSides="9">
+                <LinearLayout
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </Xama.JTPorts.ShapedView.Shapes.PolygonView>
+
+    <Xama.JTPorts.ShapedView.Shapes.DottedEdgesCutCornerView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:shape_dot_radius="3dp"
+        app:shape_dot_spacing="2dp"
+        app:shape_edge_position="right|left"
+        app:shape_dottedEdgesCutCorner_bottomLeftSize="8dp"
+        app:shape_dottedEdgesCutCorner_bottomRightSize="8dp">
+                <LinearLayout
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </Xama.JTPorts.ShapedView.Shapes.DottedEdgesCutCornerView>
+
+</GridLayout>
